# huligan-sdk

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/: BROWSER_AUTOMATION.md  CHROME_AUTOUPDATE_PLAN.md  COOKIES.md  GEOIP_SETUP.md  MCP_SERVER.md  PROXY_LAUNCH_GUIDE.md  QUICKSTART.md
examples/: detection_sweep.py  example_batch_accounts.py  example_captcha.py  example_cloudflare_turnstile.py  example_cookies.py  example_custom_fingerprint.py  example_download.py  example_fingerprint_check.py  example_from_seed.py  example_geoip.py  example_headless.py  example_human_like.py  example_markdown.py  example_mcp.py  example_multi_accounts.py  example_no_proxy.py  example_parallel_browsers.py  example_persistent_session.py  example_profile_bundle.py  example_proxy_rotation.py  example_scraping_pagination.py  example_simple.py  example_template.py  example_vision_click.py  example_with_proxy.py  example_zero_setup.py  validate_launch.py
examples/agents/: example_basic_scrape.py  example_pool.py
examples/integrations/: README.md  cdp_connect_external_framework.py  selenium_binary_and_args.py
huligan/: __init__.py  __main__.py  browser.py  chrome.py  coherence.py  conf_spec.py  cookies.py  doctor.py  fingerprint.py  geoip.py  installer.py  launch_plan.py  persistent.py  profile_bundle.py  profile_pool.py  proxy.py  serve.py  templates.py  version.py
huligan/agents/: __init__.py  _runtime.py  agent.py  plugin.py
huligan/automation/: __init__.py  cdp_helpers.py  humanize.py  idle.py  keyboard.py  mouse.py  scroll.py
huligan/captcha/: __init__.py  solvers.py
huligan/data/: __init__.py  font_lists.py  gpu_identity.py  gpu_vendors.py  screen_resolutions.py  webgl_profiles.py
huligan/markdown/: __init__.py  extractor.py
huligan/mcp/: __init__.py  __main__.py  server.py
huligan/testing/: __init__.py  detection_sweep.py
huligan/vision/: __init__.py  agent.py
tests/: test_cdp_sync_facades.py  test_cli.py  test_coherence.py  test_conf_spec.py  test_cookies_attach.py  test_detection_sweep.py  test_doctor.py  test_fingerprint_conf.py  test_gpu_identity.py  test_humanize.py  test_input_istrusted.py  test_installer.py  test_integration_primitives.py  test_launch_plan.py  test_persistent.py  test_profile_bundle.py  test_proxy_test.py  test_resolve_geo.py  test_serve.py  test_webgl_coherence.py
