[project]
name = "huligan"
version = "1.0.0"
description = "Huligan Antidetect Browser SDK"
requires-python = ">=3.9"
dependencies = ["tqdm>=4.65.0"]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
geoip = ["geoip2>=2.9.0"]
automation = ["pytweening>=1.0.4", "loguru>=0.7.0"]
all = ["playwright>=1.40.0", "geoip2>=2.9.0", "pytweening>=1.0.4", "loguru>=0.7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["huligan*"]
