[project]
name = "huligan"
version = "1.1.3"
description = "Huligan Antidetect Browser SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE.md"]
authors = [{name = "Huligan Project"}]
keywords = ["antidetect", "browser", "chromium", "fingerprint", "automation", "stealth", "scraping", "llm-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["tqdm>=4.65.0"]

[project.urls]
Homepage = "https://github.com/S1d18/huligan-sdk"
Repository = "https://github.com/S1d18/huligan-sdk"
"Binary Releases" = "https://github.com/S1d18/huligan-releases"
Issues = "https://github.com/S1d18/huligan-sdk/issues"

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
geoip = ["geoip2>=2.9.0"]
automation = ["pytweening>=1.0.4", "loguru>=0.7.0"]
# The agents extra installs only playwright; the upstream agents
# framework runtime is fetched separately via
# `huligan.agents._runtime.setup_runtime()` so that its identity is
# not baked into our dependency graph.
agents = ["playwright>=1.40.0"]
markdown = ["trafilatura>=2.0", "markdownify>=0.11"]
captcha = ["aiohttp>=3.9"]
vision = ["aiohttp>=3.9"]
mcp = ["mcp>=1.0.0", "playwright>=1.40.0"]
all = [
    "playwright>=1.40.0",
    "geoip2>=2.9.0",
    "pytweening>=1.0.4",
    "loguru>=0.7.0",
    "trafilatura>=2.0",
    "markdownify>=0.11",
    "aiohttp>=3.9",
    "mcp>=1.0.0",
]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["huligan*"]
